--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
         </style>
     </head>
     <body>
-        
+        <canvas id="game" width=1024 height=640></canvas>
+        <script src="Script/Asset.js"></script>
+        <script src="Script/Data/Card.js"></script>
+        <script src="Script/Data/Player.js"></script>
+        <script src="Script/Data/Item.js"></script>
+        <script src="Script/Data/Enemy.js"></script>
+
+        <script src="Script/Const.js"></script>
+        <script src="Script/Var.js"></script>
+    
+        <script src="Script/Function/Physics.js"></script>
+        <script src="Script/Function/Save.js"></script>
+        <script src="Script/Function/Game.js"></script>
+        <script src="Script/Function/Draw.js"></script>
+
+        <script src="Script/Scene/Title.js"></script>
+        <script src="Script/Scene/Game.js"></script>
+        <script src="Script/Scene/Battle.js"></script>
+
+        <script src="Script/Main.js"></script>
     </body>
 </html>
