--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
         <script src="Script/Function/Draw.js"></script>
 
         <script src="Script/Scene/Title.js"></script>
+        <script src="Script/Scene/LevelSelect.js"></script>
+        <script src="Script/Scene/CharasterSelect.js"></script>
+        <script src="Script/Scene/DeckSelect.js"></script>
         <script src="Script/Scene/Game.js"></script>
-        <script src="Script/Scene/Battle.js"></script>
+        <script src="Script/Scene/Shop.js"></script>
+        <script src="Script/Scene/Collection.js"></script>
 
         <script src="Script/Main.js"></script>
     </body>
